--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,14 @@
   <meta charset="utf-8">
   <title>SurveysClient</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css"> -->
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root>Loading...</app-root>
+	<!-- <script src="https://code.jquery.com/jquery-3.2.1.js"></script> -->
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script> -->
 </body>
 </html>
