--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>SurveysClient</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
+	<link rel="stylesheet" href="../node_modules/materialize-css/dist/css/materialize.css">
   <link rel="icon" type="image/x-icon" href="/src/assets/devmountain_logo.png">
 </head>
 <body>
