--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>SurveysClient</title>
@@ -10,11 +11,14 @@
   <link rel="stylesheet" href="../node_modules/mdi/css/materialdesignicons.css">
   <link rel="stylesheet" href="../node_modules/ag-grid/dist/styles/ag-grid.css">
   <link rel="stylesheet" href="../node_modules/ag-grid/dist/styles/theme-fresh.css">
-	<link rel="stylesheet" href="../node_modules/materialize-css/dist/css/materialize.css">
+  <link rel="stylesheet" href="../node_modules/materialize-css/dist/css/materialize.css">
   <link rel="stylesheet" href="./src/styles.css">
   <link rel="icon" type="image/x-icon" href="/src/assets/devmountain_logo.png">
 </head>
+
 <body>
   <app-root>Loading...</app-root>
+  <script src="https://connectors.tableau.com/libs/tableauwdc-2.2.latest.js" type="text/javascript"></script>
 </body>
+
 </html>
