--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
 
 <body>
   <app-root>Loading...</app-root>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.min.js"></script>
   <script src="https://connectors.tableau.com/libs/tableauwdc-2.2.latest.js" type="text/javascript"></script>
 </body>
 
