prepped for production

--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" href="../node_modules/mdi/css/materialdesignicons.css">
-  <link rel="stylesheet" href="../node_modules/ag-grid/dist/styles/ag-grid.css">
-  <link rel="stylesheet" href="../node_modules/ag-grid/dist/styles/theme-fresh.css">
-  <link rel="stylesheet" href="../node_modules/materialize-css/dist/css/materialize.css">
-  <link rel="stylesheet" href="./src/styles.css">
-  <link rel="icon" type="image/x-icon" href="/src/assets/devmountain_logo.png">
+  <link rel="icon" type="image/x-icon" href="./assets/devmountain_logo.png">
 </head>
 
 <body>
